--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "illuminate/database": "*",
         "innovareti/password-policy": "^1.4",
         "intervention/image-laravel": "^1.3",
+        "irazasyed/telegram-bot-sdk": "^3.14",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
