--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^2.0",
+        "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-html": "^3.11",
         "spatie/laravel-permission": "^6.10",
         "symfony/filesystem": "^7.2"
